<resources>
    <string name="app_name">LabelScan</string>
    <string name="string_scan_fab">Scan label</string>
    <string name="string_camera_helptext">Scan a label</string>
    <string name="string_scan_extended_fab">Scan</string>
    <string name="scan_extended_fab_content_desc">Scan new image</string>
    <string name="progress_indicator_desc">Image analysis progress indicator</string>
    <string name="new_scan">New Scan</string>
    <string name="scan_a_label">Scan a label</string>
    <string name="text_label_1">Settings</string>
    <string name="text_label_2">Favourites</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_pale">Pale</string>
    <string name="theme_follow_system">Use system default</string>
    <string name="preference_option_theme_light">Light</string>
    <string name="preference_option_theme_dark">Dark</string>
    <string name="preference_option_theme_pale">Pale</string>
    <string name="preference_option_theme_system">System</string>
    <string name="page_title">New Scan</string>
    <string name="view_pies">View pie charts</string>
    <string name="content_description_view_pies">View pie charts</string>
    <string name="decorative_placeholder">Decorative placeholder</string>
    <string name="bottom_navigation_bar">Bottom navigation bar</string>
    <string name="top_app_bar">Top toolbar</string>
    <string name="app_bar_navigation">Return to scan screen</string>
    <string name="gallery_button_desc">Choose image from gallery</string>
    <string name="view_list">View nutrients in list</string>
    <string name="content_description_view_list">View nutrients as list</string>
</resources>