<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- This is not an active view so colours are toned down -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_gravity="bottom"
        android:id="@+id/bottom_navigation_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        app:elevation="1dp"
        android:contentDescription="@string/bottom_navigation_bar"
        app:backgroundTint="?attr/colorPrimaryVariant"
        app:menu="@menu/bottom_navigation_menu" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/scan_extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scan_extended_fab_content_desc"
        android:fontFamily="@font/notosans_jp_medium"
        android:onClick="newScan"
        android:text="@string/string_scan_extended_fab"
        app:fabCustomSize="75dp"
        app:elevation="8dp"
        app:icon="@drawable/ic_plus_24px"
        app:layout_anchor="@+id/bottom_navigation_main"
        app:layout_anchorGravity="top|center"
        app:maxImageSize="32dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>